# APsystems-EZ1-API

./: .coverage  .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: docs.yml  python-publish.yml  testing.yml
APsystemsEZ1/: __init__.py
api/: index.html
docs/: index.md
docs/api/: index.md
search/: search_index.json
tests/: __init__.py  conftest.py  test_get_device_power_status.py  test_get_max_power.py  test_get_total_energy_lifetime.py  test_get_total_energy_today.py  test_init.py  test_set_device_power_status.py  test_set_max_power.py
tests/unit_tests/: test_debounce.py  test_get_alarm_info.py  test_get_device_info.py  test_get_device_power_status.py  test_get_max_power.py  test_get_output_data.py  test_get_total_energy_lifetime.py  test_get_total_energy_today.py  test_get_total_output.py  test_request_retry.py  test_set_device_power_status.py  test_set_max_power.py
