[tool.poetry]
name = "APsystems-EZ1-API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3"


[tool.poetry.group.dev.dependencies]
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.4.10"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
