[tool.poetry]
name = "apsystems-ez1"
version = "1.0.2"
description = "The APsystems EZ1 Python library offers a streamlined interface for interacting with the local API of APsystems EZ1 Microinverters."
authors = ["Sonnenladen GmbH <l.tiedt@sonnenladen.de>"]
readme = "README.md"

packages = [
    { include = "APsystemsEZ1" },
    { include = "APsystemsEZ1/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3"


[tool.poetry.group.dev.dependencies]
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.4.10"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
