[tool.poetry]
name = "apsystems-ez1"
version = "1.3.3"
description = "The APsystems EZ1 Python library offers a streamlined interface for interacting with the local API of APsystems EZ1 Microinverters."
authors = ["Sonnenladen GmbH <l.tiedt@sonnenladen.de>"]
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
]

packages = [
    { include = "APsystemsEZ1" },
    { include = "APsystemsEZ1/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3"

[tool.poetry.group.dev.dependencies]
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.4.10"
mkdocstrings-python = "^1.7.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-pretty = "^1.2.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
